Fix selected works

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 		<!-- <main> -->
 
-		<div class="container-fluid">
+		<div class="container-fluid mb-5">
 			<h2 class="text-content top-margin">
 				Selected Works
 			</h2>
